<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="count_options">
        <item>@string/option_words</item>
        <item>@string/option_characters</item>
    </string-array>
</resources>